# NadekoBot

./: .gitlab-ci.yml  CHANGELOG.md  CMakeLists.txt  Dockerfile  NadekoBot.sln  migrate.ps1  mkdocs.yml  remove-migration.ps1
.github/workflows/: build.yml
docs/: config-guide.md  creds-guide.md  donate.md
docs/guides/: windows-guide.md  windows-source-guide.md
docs/medusa/: creating-a-medusa.md
src/Nadeko.Medusa/: Nadeko.Medusa.csproj
src/NadekoBot/: .editorconfig  Bot.cs  NadekoBot.csproj  NadekoBot.csproj.DotSettings  Program.cs  clean-migrations.ps1  creds_example.yml  migrate.ps1  remove-migration.ps1
src/NadekoBot.Generators/: GrpcApiPermGenerator.cs
src/NadekoBot.GrpcApiBase/: NadekoBot.GrpcApiBase.csproj
src/NadekoBot.GrpcApiBase/protos/: econ.proto  exprs.proto  greet.proto  info.proto  other.proto  warn.proto  xp.proto
src/NadekoBot.Tests/: FishTests.cs  KwumTests.cs
src/NadekoBot/Db/: NadekoContext.cs  NadekoDbService.cs
src/NadekoBot/Db/Extensions/: DiscordUserExtensions.cs  GuildConfigExtensions.cs  QuoteExtensions.cs  UserXpExtensions.cs
src/NadekoBot/Db/Models/: DiscordUser.cs  FollowedStream.cs  GuildConfig.cs  Notify.cs
src/NadekoBot/Migrations/: MigrationQueries.cs
src/NadekoBot/Services/: GrpcApiPermsInterceptor.cs  GrpcApiService.cs  PermsInterceptor.cs
src/NadekoBot/_common/: Creds.cs  DoAsUserMessage.cs  ImageUrls.cs  Linq2DbExpressions.cs  NadekoModule.cs  ServiceCollectionExtensions.cs
src/NadekoBot/data/: aliases.yml  bot.yml  commandlist.json  gambling.yml  games.yml  images.yml  searches.yml  xp.yml
(+311 files in other folders)
